[metadata]
name = aioraven
version = attr: aioraven.__version__
author = Scott K Logan
author_email = logans@cottsay.net
maintainer = Scott K Logan
maintainer_email = logans@cottsay.net
license = Apache License, Version 2.0
description = Asynchronous communication with Rainforest RAVEn devices.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python
  Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
zip_safe = true

[options.extras_require]
http = aiohttp
serial = pyserial-asyncio

[flake8]
import-order-style = google

[coverage:run]
source = colcon_cmake
