[metadata]
name = aioraven
version = attr: aioraven.__version__
author = Scott K Logan
author_email = logans@cottsay.net
maintainer = Scott K Logan
maintainer_email = logans@cottsay.net
license = Apache License, Version 2.0
description = Asynchronous communication with Rainforest RAVEn devices.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.7
install_requires =
  iso4217
  pyserial-asyncio
zip_safe = true

[options.packages.find]
exclude =
  test
  test.*

[flake8]
exclude =
  .git
  build
  __pycache__
import-order-style = google

[pydocstyle]
add_ignore = D100,D102,D103,D104,D105

[coverage:run]
source = aioraven

[tool:pytest]
asyncio_mode = strict
filterwarnings =
  ignore:The loop argument is deprecated::asyncio
