[metadata]
name = aioraven
version = attr: aioraven.__version__
author = Scott K Logan
author_email = logans@cottsay.net
license = Apache License, Version 2.0
description = Asynchronous communication with Rainforest RAVEn devices.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cottsay/aioraven
project_urls =
  Changelog = https://github.com/cottsay/aioraven/blob/main/CHANGELOG.md
  GitHub = https://github.com/cottsay/aioraven
classifiers =
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = aioraven
python_requires = >=3.9
install_requires =
  iso4217
  pyserial >= 2.5
  pyserial-asyncio
zip_safe = false

[options.package_data]
aioraven = py.typed

[options.extras_require]
test =
  pytest
  pytest-asyncio

[options.packages.find]
exclude =
  test
  test.*

[flake8]
exclude =
  .git
  build
  __pycache__
import-order-style = google
extend_ignore = D

[pydocstyle]
add_ignore = D100,D102,D103,D104,D105

[coverage:run]
source = aioraven

[mypy]
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
ignore_missing_imports = true
warn_return_any = true
warn_unreachable = true

[tool:pytest]
asyncio_mode = strict
filterwarnings =
  ignore:The loop argument is deprecated::asyncio
  ignore:Unknown config option. asyncio_mode::_pytest
junit_suite_name = aioraven
